--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700%7CPoppins:400,500" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/aparecium-labs.min.css" rel="stylesheet">
+  <link href="css/styles.min.css" rel="stylesheet">
 </head>
 
 <body>
