fix: fix index title issue

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="author" content="Brion Silva">
 
-  <title>Gulp Static Seeed by Aparecium Labs</title>
+  <title>Gulp Static Seed by Aparecium Labs</title>
 
   <!-- Favicon Package -->
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/favicon_package/apple-touch-icon.png">
