--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <link rel="mask-icon" href="./assets/icons/favicon_package/safari-pinned-tab.svg" color="#5bbad5">
 
   <!-- Custom Javascript Files -->
-  <script type="text/javascript" src="./js/global.min.js"></script>
+  <script type="text/javascript" src="js/global.min.js"></script>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700%7CPoppins:400,500" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/styles.min.css" rel="stylesheet">
+  <link href="../css/styles.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -58,12 +58,21 @@
               method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
               novalidate>
               <div id="mc_embed_signup_scroll">
-                <input type="email" class="email-input" value="" name="EMAIL" id="mce-EMAIL"
-                       placeholder="Enter your email" required>
+                <input type="email"
+                       class="email-input"
+                       value=""
+                       name="EMAIL"
+                       id="mce-EMAIL"
+                       placeholder="Enter your email"
+                       required />
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-                                                                                          name="b_41620257667e0123ce58b4277_c1c1df411f"
-                                                                                          tabindex="-1" value=""></div>
+                <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                  <input
+                    type="text"
+                    name="b_41620257667e0123ce58b4277_c1c1df411f"
+                    tabindex="-1"
+                    value="" />
+                </div>
                 <button id="mc-embedded-subscribe" class="submit-btn" name="subscribe" type="submit"><b>Subscribe</b>
                 </button>
               </div>
