feat: modify app to load vendor packages automatically :sparkles:

--- a/src/index.html
+++ b/src/index.html
@@ -17,18 +17,8 @@
   <link rel="manifest" href="./assets/icons/favicon_package/site.webmanifest">
   <link rel="mask-icon" href="./assets/icons/favicon_package/safari-pinned-tab.svg" color="#5bbad5">
 
-  <!-- Custom Javascript Files -->
-  <script type="text/javascript" src="js/global.min.js"></script>
-
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Fonts -->
-  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700%7CPoppins:400,500" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="../css/styles.min.css" rel="stylesheet">
+  <!-- inject:css -->
+  <!-- endinject -->
 </head>
 
 <body>
@@ -98,8 +88,7 @@
   </div>
 </div>
 
-<!-- Bootstrap core JavaScript -->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- inject:js -->
+<!-- endinject -->
 </body>
 </html>
