chore: fix script loading issue

--- a/src/index.html
+++ b/src/index.html
@@ -74,21 +74,22 @@
     </div>
   </section>
 </div>
-<div class="footer">
-  <ul class="footer-icons">
-    <li><a href="https://www.facebook.com/apareciumlabs/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-    <li><a href="https://twitter.com/apareciumlabs" target="_blank"><i class="fa fa-twitter"></i></a></li>
-    <li><a href="https://github.com/apareciumlabs" target="_blank"><i class="fa fa-github"></i></a></li>
-  </ul>
-  <div class="copyright">
-    <p>&copy; Copyright <script language="JavaScript" type="text/javascript">document.write(getYear())</script>
-    </p>
-    <img src="assets/img/logo_aparecium_fox_only.svg" width="20px" height="20px"/>
-    <p>Aparecium Labs. All rights reserved.</p>
-  </div>
-</div>
-
 <!-- inject:js -->
 <!-- endinject -->
 </body>
+<footer>
+  <div class="footer">
+    <ul class="footer-icons">
+      <li><a href="https://www.facebook.com/apareciumlabs/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+      <li><a href="https://twitter.com/apareciumlabs" target="_blank"><i class="fa fa-twitter"></i></a></li>
+      <li><a href="https://github.com/apareciumlabs" target="_blank"><i class="fa fa-github"></i></a></li>
+    </ul>
+    <div class="copyright">
+      <p>&copy; Copyright <script language="JavaScript" type="text/javascript">document.write(getYear())</script>
+      </p>
+      <img src="assets/img/logo_aparecium_fox_only.svg" width="20px" height="20px"/>
+      <p>Aparecium Labs. All rights reserved.</p>
+    </div>
+  </div>
+</footer>
 </html>
