chore(index): add local gulp logo file

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,9 @@
 
     <!-- inject:css -->
     <!-- endinject -->
+
+    <!-- inject:js -->
+    <!-- endinject -->
   </head>
 
   <body>
@@ -305,7 +308,7 @@
               <h2 class="title">
                 <img
                   class="gulp-logo"
-                  src="https://cdn.worldvectorlogo.com/logos/gulp.svg"
+                  src="assets/img/gulp-logo.svg"
                   alt="gulp"
                 /><b>Gulp Static Seed</b>
               </h2>
@@ -365,8 +368,6 @@
         </div>
       </section>
     </div>
-    <!-- inject:js -->
-    <!-- endinject -->
     <div class="footer">
       <ul class="footer-icons">
         <li>
@@ -401,5 +402,4 @@
       </div>
     </div>
   </body>
-  <footer></footer>
 </html>
