fix(ci): fix ci failing issue :bug:

--- a/src/index.html
+++ b/src/index.html
@@ -390,7 +390,7 @@
         <p>
           &copy; Copyright
           <script language="JavaScript" type="text/javascript">
-            document.write(getYear());
+            document.write(getCurrentYear());
           </script>
         </p>
         <img
