refactor(core): rename project name

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="author" content="Brion Silva" />
 
-    <title>Gulp Static Seed by Aparecium Labs</title>
+    <title>HTML Seed by Aparecium Labs</title>
 
     <!-- Favicon Package -->
     <link
@@ -310,7 +310,7 @@
                   class="gulp-logo"
                   src="assets/img/gulp-logo.svg"
                   alt="gulp"
-                /><b>Gulp Static Seed</b>
+                /><b>HTML Seed</b>
               </h2>
               <p class="desc">
                 We <span style="color: red">&hearts;</span> open-source and
