refactor(core): change project name :truck:

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="author" content="Brion Silva" />
 
-    <title>HTML Seed by Aparecium Labs</title>
+    <title>HTML Starter by Aparecium Labs</title>
 
     <!-- Favicon Package -->
     <link
@@ -317,7 +317,7 @@
                 <div class="text-center mb-4">
                   <img
                     class="mb-4"
-                    src="assets/img/html-seed.svg"
+                    src="assets/img/html-starter.svg"
                     alt=""
                     width="200"
                     height="200"
